# fatec

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .gitmodules  compose.yaml  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs  pyproject.toml  tsconfig.json
src/1-semestre/algoritmos-e-logica-de-programacao/aula-1-variaveis-e-funcoes/: 1.js  4.js  5.js  6.js
src/1-semestre/desenvolvimento-web/aula-1-html/: 1.html  4.html  5.html  7.html  9.html  index.html
src/2-semestre/banco-de-dados-relacional/: aula03.sql  aula04.sql  prova3.sql  simulado.sql
src/2-semestre/banco-de-dados-relacional/aula-2-sql/: aula02.sql
src/2-semestre/banco-de-dados-relacional/aula-3-constraints/: aula03.sql
src/2-semestre/desenvolvimento-web-2/aula-1-ts/: .eslintrc.js  1-formatar.ts  2-arrays.ts  3-carros.ts  4-reduce.ts  5-split.ts  index.ts  package-lock.json  package.json
src/2-semestre/desenvolvimento-web-2/aula-2-ts/: 2-nomes.ts  4-reduce.ts
src/2-semestre/desenvolvimento-web-2/aula-3-funcoes/: exercicio-10-estados-formatados.ts  exercicio-7-axios.ts  exercicio-8-regioes.ts  exercicio-9-estados.ts
src/2-semestre/desenvolvimento-web-2/aula-4-backend/: index.ts
src/2-semestre/estrutura-de-dados/aula-2/: bloco-de-decisao.ts  bloco-de-repeticao.ts  variaveis-e-tipos.ts
src/2-semestre/estrutura-de-dados/aula-3/: model.ts  view.ts
src/2-semestre/estrutura-de-dados/aula-4/: models.ts
src/3-semestre/algebra-linear/: introducao.ipynb
src/desenvolvimento-web/aula-1-html/: 1.html  10.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
(+162 files in other folders)
